--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -32,6 +32,26 @@ jobs:
           distribution: "temurin"
           java-version: "17"
 
+      - name: Install Android SDK command-line tools and platforms
+        working-directory: portfolio-app
+        run: |
+          set -e
+          ANDROID_SDK_ROOT="$HOME/android-sdk"
+          mkdir -p "$ANDROID_SDK_ROOT"
+          # Download command line tools (update URL if Google updates)
+          wget -q https://dl.google.com/android/repository/commandlinetools-linux-110-8512546_latest.zip -O /tmp/cmdline-tools.zip
+          unzip -q /tmp/cmdline-tools.zip -d "$ANDROID_SDK_ROOT"
+          mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools/latest"
+          mv "$ANDROID_SDK_ROOT"/cmdline-tools/* "$ANDROID_SDK_ROOT/cmdline-tools/latest/" || true
+          export PATH="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH"
+          # Accept licenses
+          yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses >/dev/null || true
+          # Install the platform and build-tools that match your project's compileSdkVersion
+          # Adjust 33 / 33.0.2 to match android/app/build.gradle compileSdkVersion / buildToolsVersion if different.
+          sdkmanager --sdk_root="$ANDROID_SDK_ROOT" "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+        env:
+          JAVA_HOME: /usr/lib/jvm/java-17-openjdk-amd64
+
       - name: Make gradlew executable
         working-directory: portfolio-app/android
         run: chmod +x gradlew
