--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -35,6 +35,10 @@ jobs:
         with:
           distribution: "temurin"
           java-version: "17"
+          
+      - name: Make gradlew executable
+        working-directory: portfolio-app/android
+        run: chmod +x ./gradlew
 
       - name: Build Android debug APK
         working-directory: portfolio-app/android
