--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -26,6 +26,12 @@ jobs:
         working-directory: portfolio-app
         run: npm run build:mobile
 
+      - name: Set up Android SDK
+        uses: r0adkll/setup-android@v1
+        with:
+          sdk-version: "34"
+          build-tools-version: "34.0.0"
+
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
@@ -41,4 +47,3 @@ jobs:
         with:
           name: portfolio-debug-apk
           path: portfolio-app/android/app/build/outputs/apk/debug/app-debug.apk
-
