--- a/portfolio-app/android/app/capacitor.build.gradle
+++ b/portfolio-app/android/app/capacitor.build.gradle
@@ -7,8 +7,8 @@ android {
   }
 }
 
-// Use a more robust way to reference the cordova.variables.gradle file
-apply from: file("$rootDir/capacitor-cordova-android-plugins/cordova.variables.gradle")
+// Use a relative path that works in both local and CI environments
+apply from: new File(projectDir, "../capacitor-cordova-android-plugins/cordova.variables.gradle")
 dependencies {
 
 
