--- a/portfolio-app/android/app/build.gradle
+++ b/portfolio-app/android/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
-    implementation project(':capacitor-cordova-android-plugins')
+    // Removed capacitor-cordova-android-plugins dependency as it's not needed
 }
 
 apply from: 'capacitor.build.gradle'
