--- a/portfolio-app/android/settings.gradle
+++ b/portfolio-app/android/settings.gradle
@@ -1,5 +1,3 @@
 include ':app'
-include ':capacitor-cordova-android-plugins'
-project(':capacitor-cordova-android-plugins').projectDir = new File('./capacitor-cordova-android-plugins/')
-
+// Removed capacitor-cordova-android-plugins as it's not needed for this project
 apply from: 'capacitor.settings.gradle'
